package model.tuiles;

public enum Shape {
    I, T, L
}
